--- a/grid_style.css
+++ b/grid_style.css
@@ -1,15 +1,12 @@
-
-  @import url('https://fonts.googleapis.com/css2?family=Lora&family=Poppins:wght@300&display=swap');
+ @import url('https://fonts.googleapis.com/css2?family=Lora&family=Poppins:wght@300&display=swap');
   *{
     font-family: 'Lora', serif;
-    /* font-family: 'Poppins', sans-serif; */
+ /* font-family: 'Poppins', sans-serif; */
   }
-  h4{
-    text-align: center;
-  }
+  
 .container {
-    margin: 0 auto;
-    width: 1170px;
+    margin: 8vh;
+    width: 90vw;
     height: 500px;
     /* border: 2px solid black; */
     display: grid;
@@ -17,6 +14,7 @@
     grid-template-rows: 1fr 1fr;
     grid-gap: 20px;
 }
+
 .box1{
     background-color: #FFE5C6;
     text-align: center;
@@ -78,53 +76,36 @@
     grid-column: 5/7;
 }
 
-@media only screen and (min-width: 250px){
-    .container {
-        margin: 0 auto;
-        width: 100%; 
-        height: auto; 
-        display: grid;
-        grid-template-columns: 1fr; 
-        grid-template-rows: auto;
-        grid-gap: 10px;
-    }
-    
-    .box1,
-    .box6 {
-        grid-column: 1; 
-    }
-    
-    .box2,
-    .box3,
-    .box4,
-    .box5 {
-        grid-column: 1; 
-    }
-    }
 
-@media only screen and (max-width: 600px  ) {
+
+@media only screen and (max-width: 768px  ) {
     .container {
         grid-template-columns: repeat(2, 1fr); 
+        width: 100vw;
     }
 
-    .box1,
-    .box6 {
-        grid-column: 1 / 2; 
+    .box1,.box3,.box5 {
+        grid-column: 1/2 ;
     }
-
-    .box2,
-    .box3,
-    .box4,
-    .box5 {
-        grid-column: 1 / 2; 
+    .box2,.box4,.box6 {
+        grid-column: 2 / 3; 
     }
+    .box3 img,.box5 img{
+        padding: 100px;
+    }
+    .box2 img{
+        padding-bottom: 50px;
+    }
+    .box4 img{
+        padding-top: 80px;
+    }
+   
 }
 
-
-@media only screen and (min-width: 1024px) {
+@media only screen and (max-width: 1150px) {
     .container {
-     margin: 0 auto;
-    width: 1170px;
+     margin:8vh;
+    width: 90vw;
     height: 500px;
     /* border: 2px solid black; */
     display: grid;
@@ -132,28 +113,24 @@
     grid-template-rows: 1fr 1fr;
     grid-gap: 20px;   
     }
-    .box1{
-       
-        grid-column:1/3;
+    .box2 img,.box4 img{
+        height: auto;
+        width: 350px;
     }
-    .box2{ 
-        grid-column: 3/6;
+}
+@media only screen and (max-width: 426px){
+    .container {
+        grid-template-columns: 1fr; 
+        grid-template-rows: 6fr;
+        width: 100vw;
     }
-    
-    .box3{
-        grid-column: 6/7;
+    .box1,.box2,.box3,.box4,.box5,.box6 {
+        grid-column: 1/2 ;
     }
-    
-    .box4{
-        grid-column: 1/4;
+    .box3 img,.box5 img{
+        padding-left: 180px;
     }
-   
-    .box5{
-        grid-column: 4/5;
+    .box2 img,.box4 img{
+        padding-bottom: 50px;
     }
-   
-    .box6{
-        grid-column: 5/7;
-
-} 
 }
